<resources>
    <string name="app_name">ComplaintApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="security_key">Security key</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
</resources>
