<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    tools:context=".Sign_Up_Corporation">

    <include
        android:id="@+id/Corporation_Sign_Up_Page_bar"
        layout="@layout/app_bar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Corporation_Sign_Up_Page_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/Corporation_User_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_profile"
                android:drawablePadding="5dp"
                android:hint="@string/user_name"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Corporation_Phone_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_phone"
                android:paddingRight="5dp"
                android:hint="@string/phone_number"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Corporation_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Corporation_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Corporation_Security_Key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:hint="@string/security_key"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="5dp"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Corporation_Country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:hint="Country"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Corporation_State"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:hint="State"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Corporation_District"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:hint="District"
                android:textSize="24sp" />

            <Button
                android:id="@+id/Corporation_Sign_Up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:padding="5dp"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/Corporation_Login_Screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="Already Have an Account? Click here"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/Corporation_Register_As_Citizen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="Register as Citizen"
                android:textColor="#000000"
                android:textSize="15dp" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>